@@ -37,7 +37,7 @@ use Text::Wrap;
 ## don't buffer output
 $| = 1;
 
-my $revision = ' $Revision: 1.153 $ ';
+my $revision = ' $Revision: 1.154 $ ';
 my $version;
 my $name;
 $revision =~ / ([\d\.]*) /;
@@ -1193,12 +1193,12 @@ sub check_pkg {
 		$log->warning();
                 $log->print(join("\n", @out) . "\n");
 		my $details;
-		$details = "(including S4 classes and methods)"
+		$details = " (including S4 classes and methods)"
 		  if(grep(/^Undocumented S4/, @out));
 		$log->print(wrap("", "",
-				 ("All user-level objects in a package",
-				  $details,
-				  "should have documentation entries.\n")));
+				 ("All user-level objects",
+				  "in a package${details} should",
+				  "have documentation entries.\n")));
 		$log->print(wrap("", "", @msg_writing_Rd));
 	    }
 	    else {
